# kineo-tamarisk

./: .gitignore  README.md  pyproject.toml
kineo_tamarisk/: __init__.py
kineo_tamarisk/cli/: __init__.py  main.py
kineo_tamarisk/model/: __init__.py  classifier.py
scripts/: train.py
tests/: test_inference.py
